@@ -1,1 +1,2 @@
 fluid.ethanolgas=Ethanol Gas
+fluid.highpressureexhauststeam=High Pressure Exhaust Steam
