@@ -12,3 +12,12 @@ ethanolGas.temperature = <liquid:gasoline>.temperature;
 ethanolGas.viscosity = <liquid:gasoline>.viscosity;
 ethanolGas.gaseous = <liquid:gasoline>.gaseous;
 ethanolGas.register();
+
+
+var highPressureExhaust = VanillaFactory.createFluid("highpressureexhauststeam", Color.fromHex("656b76"));
+highPressureExhaust.luminosity = <liquid:highpressuresteam>.luminosity;
+highPressureExhaust.density = <liquid:highpressuresteam>.density;
+highPressureExhaust.temperature = <liquid:highpressuresteam>.temperature;
+highPressureExhaust.viscosity = <liquid:highpressuresteam>.viscosity;
+highPressureExhaust.gaseous = true;
+highPressureExhaust.register();
