@@ -7,6 +7,7 @@ removed pam's beet crop
 added new fuels to oil generator and portable generator
 hid all forestry cans and capsules except for water
 tin deposits can now spawn in swamps
+added high pressure exhaust steam
 
 0.0.2:
 removed pointless woven cloth recipe
